# NexusMods.MnemonicDB

./: .gitignore  CHANGELOG.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  NexusMods.EventSourcing.sln  NexusMods.MnemonicDB.sln  NexusMods.MnemonicDB.sln.DotSettings  NexusMods.MneumonicDB.sln  NexusMods.MneumonicDB.sln.DotSettings  NuGet.Build.props  README.md  build-to-local-nuget-cache.ps1  mkdocs.yaml  mkdocs.yml  qodana.yaml
.github/workflows/: code_quality.yml  dotnet-build-and-test.yaml  publish-nuget-packages.yaml
NexusMods.MnemonicDB.QueryEngine/: IColumn.cs  IRule.cs  ITable.cs  LVar.cs  NexusMods.MnemonicDB.QueryEngine.csproj  Predicate.cs  Query.cs  QueryPredicates.cs  Term.cs
NexusMods.MnemonicDB.QueryEngine/AST/: ANodeWalker.cs  JoinNode.cs  Node.cs  PredicateNode.cs  SelectNode.cs
NexusMods.MnemonicDB.QueryEngine/Abstractions/: LVar.cs
NexusMods.MnemonicDB.QueryEngine/Facts/: EmptyTable.cs  FactDelta.cs  FactStream.cs  Facts.cs  Facts.tt  IActiveTable.cs  IFact.cs  ITable.cs  ListTable.cs  TableExtensions.cs
docs/: AdaptingToChanges.md  AmbientQueries.md  AttributeDefinitions.md  AttributesAndProjections.md  BenchmarkLog.md  Benchmarks.md  DatomStore.md  EventStore.md  GettingStarted.md  IndexFormat.md  QueryDesign.md  SchemaChanges.md  SecondaryIndexes.md  Serialization.md  StorageModel.md  ValueFormat.md  index.md
src_native/NexusMods_MnemonicDB_Native/: CMakeLists.txt  Comparers.h  datom.h  library.cpp  library.h
tests/: Directory.Build.props  SharedAssemblyAttributes.cs  SharedUsings.cs
(+1982 files in other folders)
